force-app/main/default/objects/Asset_Detail__c/Asset_Detail__c.object-meta.xml
<CustomObject>
    <label>Asset Detail</label>
    <nameField>
        <label>Field Asset Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>