force-app/main/default/objects/Asset_Detail__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Asset Details</relationshipLabel>
    <relationshipName>Asset_Details</relationshipName>
    <type>Lookup</type>
</CustomField>