force-app/main/default/objects/Asset_Detail__c/fields/Asset_Price__c.field-meta.xml
<CustomField>
    <fullName>Asset_Price__c</fullName>
    <label>Asset Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>