force-app/main/default/objects/Asset_Detail__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BMW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>