force-app/main/default/objects/Asset_Detail__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <label>Serial</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>